--- a/analisis/neuquen.Rmd
+++ b/analisis/neuquen.Rmd
@@ -29,7 +29,7 @@ tc_bna <- read.csv("data/tcp/tc_bna.csv", sep=";") %>%
 
 # Producción y precios del crudo
 ```{r}
-produccion_provincia <- read_excel("data/regalias/produccion_provincia_crudo.xlsx" , 
+produccion_provincia_crudo <- read_excel("data/regalias/produccion_provincia_crudo.xlsx" , 
     skip = 10) %>%
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "m3",         
@@ -41,7 +41,6 @@ produccion_provincia <- read_excel("data/regalias/produccion_provincia_crudo.xls
   mutate_all(conversor_m3bbl_q) %>%
   ungroup() %>% 
   mutate(unidad = "barriles")
-produccion_provincia
 
 precio_tipo_crudo <- read_excel("data/regalias/precio_tipo_crudo.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
@@ -57,7 +56,7 @@ precio_tipo_crudo <- read_excel("data/regalias/precio_tipo_crudo.xlsx", skip = 1
 precio_tipo_crudo
 
 
-precio_provincia <- read_excel("data/regalias/precio_provincia_crudo.xlsx", skip = 12) %>% 
+precio_provincia_crudo <- read_excel("data/regalias/precio_provincia_crudo.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "USD/m3",
          variable = "Precio Mercado Interno del Crudo ",
@@ -68,7 +67,7 @@ precio_provincia <- read_excel("data/regalias/precio_provincia_crudo.xlsx", skip
   mutate_all(conversor_m3bbl_p) %>%
   ungroup() %>% 
   mutate(unidad = "USD/barriles")
-precio_provincia
+precio_provincia_crudo
 ```
 
 # Producción y precios del gas
@@ -104,19 +103,27 @@ precio_internacional_gas
 
 
 ```{r}
-brecha_gas <- precio_interno_gas %>% 
+brecha_gas <- precio_interno_gas %>%
+  group_by(anio, unidad, variable, provincia ) %>% 
+  summarise(precio_interno=mean(precio_interno )) %>% 
   left_join(precio_internacional_gas, by = c("anio", "unidad")) %>% 
   mutate(brecha_interno_externo = precio_interno/valor_precio_internacional - 1,
          brecha_interno_externo_porcentaje = scales::label_percent()(brecha_interno_externo))
 brecha_gas
 ```
 
+```{r}
+unique(brecha_gas$precio_internacional)
+brecha_gas %>% 
+  filter(precio_internacional =="precio_impo_gas_arg_bolivia_comtrade" )
+```
+
 
 ```{r}
-writexl::write_xlsx(x = list("produccion_provincia" = produccion_provincia, 
-                            "precio_provincia"  = precio_provincia, 
+writexl::write_xlsx(x = list("prod_prov_crudo" = produccion_provincia_crudo, 
+                            "precio_prov_crudo"  = precio_provincia_crudo, 
                             "precio_tipo_crudo" =precio_tipo_crudo, 
-                            "brecha_interno_externo" = brecha_gas),
+                            "brecha_int_ext_gas" = brecha_gas),
                       path = "resultados/neuquen/produccion_y_precios_x_provincia (Base Regalias).xlsx")
 
 ```
