--- a/analisis/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/calculo_renta_hidrocarburos.Rmd
@@ -3399,23 +3399,21 @@ PIB Explotación Minas y Canteras en australes a precios de 1970. 1980-1990](htt
 
 ## Valor Bruto de la Producción, Valor Agregado y Consumo Intermedio 
 
-Se presentan a continuación distintas estimaciones del Valor Bruto y Agregado de Producción (VBP y VA), Consumo Interemedio (CI) y  Excedente Bruto de Explotación (EBE). Esta última partida constituye la plusvalía (PV) total de la rama, es decir, la suma de la renta de la tierra (RT) más la ganancia normal (Gnorm), y se obtiene luego de descontar del VA sus respectivos CI, MS, impuestos específicos (Imp) y depreciación de capital o consumo de capital fijo (ConsKfijo). Las distintas series presentadas se construyeron siguiendo los siguientes criterios que luego se observarán en la formulación matemática:
+Se presentan a continuación distintas estimaciones sobre la magnitud de riqueza presente en el sector hidrocarburífero: Valor Bruto y Agregado de Producción (VBP y VA), Consumo Interemedio (CI), Masa Salarial (MS) y Excedente Bruto de Explotación (EBE). El VBP surge de la valuación de la producción a sus precios correspondientes. El VA resulta de la diferencia entre el VBP y CI, el cual puede surgir originalmente de esta resta o a partir del coeficiente técnico de la Matriz Insumo Producto (MIP). El EBE constituye la plusvalía (PV) total de la rama, es decir, la suma de la renta de la tierra (RT) más la ganancia normal (Gnorm), y se obtiene luego de descontar la MS y los impuestos específicos (Imp) del VA. En todos los casos que se presentarán a continuación, los Imp se calcularon a partir de un coeficiente fijo resultante de la  MIP de 1997. Lo mismo pasa con la estimación de la depreciación de capital o consumo de capital fijo (ConsKfijo), que se obtiene a partir de aplicar una tasa de depreciación constante sobre el Stock de Capital Adelantado (KTA). Esta partida se aplica para obtener el Excedente Neto de Explotación. Se presentan distintas estimaciones para el VBP, CI y MS, que luego se observarán en la formulación matemática:
 
 
 * CCNN (*vbp_va_ci_ccnn* y *pv_hidrocarburos_ccnn*)
-  + Valores contables oficiales de las Cuentas Nacionales (sólo disponible para el período 2004-2012). Dado que se posee información del salario promedio del sector y el empleo, se pudo obtener la MS resultante. A partir de estos datos se elaboró un coeficiente que refleja el promedio de la proporción de la MS sobre el VBP (sin distinguir extracción y sus respectivos servicios de apoyo) que se utilizará en los cálculos posteriores. Se podria afinar una MS solo de extracción.
+  + Valores contables oficiales de las Cuentas Nacionales (sólo disponible para el período 2004-2012). Dado que se presentan series de VBP y VA, se pudo estimar el CI como la diferencia de dichas cuentas. Se procedió a separar el VBP a partir del peso del VBP de los servicios de apoyo a la extracción sobre el VBP de extracción de petróleo y gas, presente en el Cuadro de Utilización de Oferta (COU) de 2004 de INDEC. Se descontó esta proporción (resultante del 10,7%) del VBP total para obtener un VBP sólo de extracción. Dado que se posee información del salario promedio del sector y el empleo, se pudo obtener la MS resultante, tanto para el total del sector (extracción y servicios relacionados) como para sólo extracción. A partir de estos datos se elaboró un coeficiente que refleja el promedio de la proporción de la MS sobre el VBP que se utilizará en cálculos posteriores de MS total y MS de extracción. 
 
-* Criterio CCNN (*vbp_va_ci_propia*)
-  + Estimación propia de los valores contables a partir de las fuentes recopiladas, siguiendo los criterios de las Cuentas Nacionales. Es decir, para obtener el VBP se valua la producción destinada al mercado interno (resultante a partir de la diferencia entre producción y exportaciones) con los precios internos y las exportaciones con los precios de exportación o referencia internacional, con tipo de cambio comercial (TCC). Este VBP no tiene descontado los servicios auxiliares a la extracción de hidrocarburos. El Consumo Intermedio se estima a partir del coeficiente técnico de la MIP de 1997 sobre el VBP mencionado anteriormente. De igual manera, para calcular la masa salarial se aplicó el coeficiente mencionado en el párrafo anterior sobre el VBP aquí resultante. Finalmente, como se mencionó anteriormente, el VA el EBE se calcularon a partir de las diferencias mencionadas anteriormente. Esta estimación de VBP no tiene descontado los servicios de apoyo a la extracción.
+* Estimación propia con criterio CCNN (*vbp_va_ci_propia*)
+  + Estimación propia de los valores contables a partir de las fuentes recopiladas, siguiendo los criterios de las Cuentas Nacionales. Es decir, para obtener el VBP se valua la producción destinada al mercado interno (resultante a partir de la diferencia entre producción y exportaciones) con los precios internos y las exportaciones con los precios de exportación, valuados tipo de cambio comercial (TCC). Se procedió también a separar el VBP de extracción neto de los servicios tal como se explicó anteriormente. El CI se estimó a partir de aplicar el coeficiente técnico de la MIP de 1997 sobre el VBP. De igual manera, para calcular la masa salarial se aplicó el coeficiente de MS mencionado anteriormente. Finalmente, como se mencionó anteriormente, el VA el EBE se calcularon a partir de las diferencias mencionadas anteriormente. 
 
-CCNN reestimado (*vbp_ccnn*)
-  + Estimacion que toma los valores oficiales de las cuentas nacionales para el período que hay valores (2004 -2012), e imputa los valores faltantes por medio de la evolución de un índice del VBP propio con criterio CCNN. Cabe subrayar que el valor base del VBP tiene descontado los servicios de apoyo a la extracción, pero no así el VBP utilizado en el índice. El CI se estimó a partir de aplicar el coeficiente técnico sobre esta estimación del VBP, por lo qeu sería un CI sólo de extracción. Se utilizaron los valores oficiales de la MS cuando se encontraba disponible el dato, mientras que se procedió a imputar los faltantes por medio del coeficiente sobre el VBP. Como en todos los casos, el VA y EBE surgen como diferencia de las partidas anteriores. 
+* Empalme CCNN (*vbp_ccnn*)
+  + Estimación que toma los valores oficiales de las cuentas nacionales para el período donde se presentan datos (2004 -2012) y que imputa los valores faltantes por medio de la evolución del índice del VBP propio con criterio CCNN explicado anteriormente. Asimismo, se utilizaron los valores oficiales de la MS cuando se encontraba disponible el dato (1996-2018), mientras que se utilizó el valor propio estimado con criterio de las CCNN para los restantes años. 
   
-Criterio Propio (*pv_hidrocarburos_propia*)
-  + Estimación propia que refleja con mayor precisión el valor de la riqueza presente en el sector. El VBP se obtiene a paritr de valuar la totalidad de la producción a los precios externos o de referencia internacional y con el tipo de cambio de paridad (TCP), que mide la capacidad real de compra de la moneda nacional. Sin embargo, como el CI constituyen intercambios de mercancías realizadas en el ámbito nacional, dicha partida se obtiene a partir de los valores obtenidos en los cálculos de criterio CCNN. Es decir, el CI es calculado con el coeficiente técnico sobre el VBP con produccion local valuada a precios internos y exporaciones a precios externos con TCC. Asimismo, de igual manera que en Criterio CCNN, la MS se estimó a partir del coeficiente promedio (obtenido sobre los valores oficiales de CCNN) sobre el VBP estimado con criterio propio, y el VA y el EBE a partir de las diferencias entre las partidas anteriores. Es importante subrayar que este cálculo de VBP no tiene descontado los servicios de apoyo a la extracción.
+* Criterio Propio (*pv_hidrocarburos_propia*)
+  + Estimación propia que refleja con mayor precisión el valor de la riqueza total presente en el sector. El VBP se obtiene a paritr de valuar la totalidad de la producción a los precios externos o de referencia internacional y con el tipo de cambio de paridad (TCP), que mide la capacidad real de compra de la moneda nacional. Sin embargo, como el CI constituyen intercambios de mercancías realizadas en el ámbito nacional, dicha partida se obtiene a partir de los valores obtenidos en la serie de empalme CCNN. De igual manera, se utilizó la MS resultante de esta última estimación. 
 
-Criterio Propio con VBP de CCNN (*pv_hidrocarburos*)
-  + Toma el VBP de criterio propio y para obtener el VA, se le descuenta el CI de extracción de CCNN restimado (sin embargo, como se dijo, el VBP no tiene descontado los servicios). Se utilizó tambien la MS estimada en CCNN restimado. El EBE surge como diferencia de las partidas. 
 
 
 
@@ -3563,14 +3561,13 @@ deberia ser = que aplicar coef (2) a VBP
   + Cálculo propio del VBP con datos datos de producción y precio internacional recopilados. Las fuentes son las siguientes (los criterios son los mismos para la utilización posterior en el cálculo de renta de la tierra hidrocarburífera por diferencial de precios, sobrevaluación cambiaria y otros mecanismos)
 
 * Salario y empleo
-  + MTEySS (Base Minería e Hidrocarburos de las Cuentas Nacionales)
-  + [Ministerio de Trabajo, Empleo y Seguridad Social - Observatorio de Empleo y Dinámica Empresarial (OEDE)](http://www.trabajo.gob.ar/estadisticas/oede/estadisticasnacionales.asp)
-  + EPH ??
+  + 1960-1996: estimación a partir de aplicación del coeficiente de proporción de la masa salarial sobre el VBP
+  + 1996 en adelante: Ministerio de Trabajo, Empleo y Seguridad Social - Observatorio de Empleo y Dinámica Empresarial (OEDE)
 <br>
 
 
 
-### Estimación por Cuentas Nacionales
+### Cuentas Nacionales
 ```{r message=FALSE, warning=FALSE, include=FALSE}
 
 #coef CI
@@ -3640,10 +3637,7 @@ mean_coef_req_extr_ccnn_b <- mean(sum(vbp_va_ci_ccnn$ci_extraccion_hidrocarburos
 
 ```
 
-### Estimaciones en base a fuentes recopiladas. Metodología propia y CCNN
-
-
-
+### Estimación propia con criterio de propio y CCNN
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 precios_y_cantidades <- prod_merge_crudo %>% 
@@ -3704,7 +3698,11 @@ indice_vbp_criterio_ccnn <- vbp_va_ci_propia %>%
 
 ## Empleo, Remuneraciones y Masa Salarial (CCNN)
 
-
+* Salario y empleo
+  + MTEySS (Base Minería e Hidrocarburos de las Cuentas Nacionales) (1996-2013)
+  + [Ministerio de Trabajo, Empleo y Seguridad Social - Observatorio de Empleo y Dinámica Empresarial (OEDE)](http://www.trabajo.gob.ar/estadisticas/oede/estadisticasnacionales.asp) (1996-2019)
+  + EPH ??
+<br>
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 #anuarios CEPAL
